Some changes in the file

--- a/GRIP INTERNSHIP/Prediction Using Supervised ML (Task-01).ipynb
+++ b/GRIP INTERNSHIP/Prediction Using Supervised ML (Task-01).ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task - 01\n",
-    "# Predition Using Supervised ML (Level - Biginner)\n",
+    "## Task - 01\n",
+    "## Predition Using Supervised ML (Level - Biginner)\n",
+    "### Instruction\n",
     "1. Predict the pecentage of an student based on tthe no. of study hours.\n",
     "2. This is a simple Linear Regrassion task as it involves just 2 variables.\n",
     "3. You can use R, Python, SAS Enterprise Miner or any other tool.\n",
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +35,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-01 Reading the Data from the Source"
+    "## Step-01 Reading the Data from the Source"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
        "4    3.5      30"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
    "source": [
     "# Reading data from remote link\n",
     "#url = \"http://bit.ly/w-data\" \n",
-    "f= open('data.csv', mode='r') # file open() function help to fetch data from the source or url.\n",
+    "f= open('Data Set.csv', mode='r') # file open() function help to fetch data from the source or url.\n",
     "s_data = pd.read_csv(f) #pd.read_csv() function helps to read the csv formated data.\n",
     "print(\"Data imported successfully\")\n",
     "\n",
@@ -132,13 +133,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-02 Data Cleaning\n",
+    "## Step-02 Data Cleaning\n",
     "Checking how many null values are there in dataset(Handling Missing Values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +150,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
        "max     9.200000  95.000000"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +338,7 @@
        "Scores   25.0  51.480  25.286887  17.0  30.0  47.0  75.0  95.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,13 +383,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-03 Data Visualization\n",
+    "## Step-03 Data Visualization\n",
     "Plotting a scatter plot showing the relationship between Score vs No. of hours Studies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -429,13 +430,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-4 Data Processing\n",
+    "## Step-4 Data Processing\n",
     "This step involved division of datya into \"Attributes\"(input) and \"labels\"(output)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,13 +448,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-05 Model Training\n",
+    "## Step-05 Model Training\n",
     "Spliting the data into traning and test sets and training the algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -475,12 +476,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-06 Plotting the Line of Regression"
+    "## Step-06 Plotting the Line of Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -514,12 +515,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-07 Making Prediction"
+    "## Step-07 Making Prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -544,12 +545,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-08 Comparing the Actual result to the predited Model Result"
+    "## Step-08 Comparing the Actual result to the predited Model Result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +617,7 @@
        "4      62  60.491033"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +646,7 @@
        "array([93.69173249])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,13 +661,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Step-09 Evaluating the Model\n",
+    "## Step-09 Evaluating the Model\n",
     "The final step to evaluate the perfromance of algorithm. This step is particularly to comapare how nwell different how well different algorithms perform on a particular dataset. Here diffent errors have been calculated to comapare the model performance and predict the accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -692,24 +693,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### R-2 gives the score of model fit and this case we have R-2 = 0.9454906892105355 which is actually a great score for this model."
+    "R-2 gives the score of model fit and this case we have R-2 = 0.9454906892105355 which is actually a great score for this model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion\n",
+    "## Conclusion\n",
     "I was succesfully able to carry-out Prediction using Supervied ML task and was able to evalute the model performance on various parameters.\n",
     "##### Thanks!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
