Some Update in the Documentation

--- a/GRIP INTERNSHIP/Prediction Using Supervised ML (Task-01).ipynb
+++ b/GRIP INTERNSHIP/Prediction Using Supervised ML (Task-01).ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4    3.5      30"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "max     9.200000  95.000000"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "Scores   25.0  51.480  25.286887  17.0  30.0  47.0  75.0  95.0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "4      62  60.491033"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "array([93.69173249])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Erro:  4.183859899002975\n",
+      "Mean Absolute Error:  4.183859899002975\n",
       "Mean Squared Error:  21.598769307217406\n",
       "Root Mean Square Error:  4.647447612100367\n",
       "R-2 0.9454906892105355\n"
