--- a/GRIP INTERNSHIP/Prediction Using Supervised ML (Task-01).ipynb
+++ b/GRIP INTERNSHIP/Prediction Using Supervised ML (Task-01).ipynb
@@ -7,7 +7,7 @@
     "## Task - 01\n",
     "## Predition Using Supervised ML (Level - Biginner)\n",
     "### Instruction\n",
-    "1. Predict the pecentage of an student based on tthe no. of study hours.\n",
+    "1. Predict the pecentage of an student based on the no. of study hours.\n",
     "2. This is a simple Linear Regrassion task as it involves just 2 variables.\n",
     "3. You can use R, Python, SAS Enterprise Miner or any other tool.\n",
     "4. Data can be found at http://bit.ly/w-data \n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "4    3.5      30"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "max     9.200000  95.000000"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "Scores   25.0  51.480  25.286887  17.0  30.0  47.0  75.0  95.0"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graph we can safely assume a positive linear between relationship between the number of hours studies and percentage of score"
+    "From the graph we can safely assume a positive linear relationship between the number of hours studies and percentage of score"
    ]
   },
   {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "4      62  60.491033"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
        "array([93.69173249])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
